# dictionaryutils

./: .gitignore  .secexclude  .secinclude  .secrets.baseline  .travis.yml  Dockerfile  README.md  dev-requirements.txt  dockerrun.bash  pull_request_template.md  pyproject.toml  run_tests.sh  setup.py
.github/workflow/: ci.yaml  lint.yaml
.github/workflows/: ci.yaml  pypi.yaml
dictionaryutils/: __init__.py  dictionary.py  schema_test.py  version_data.py
dictionaryutils/schemas/: data_release.yaml
tests/: test_datamodel.py  test_required_fields.py  test_schema_rules.py
