[tool.poetry]
name = "dictionaryutils"
version = "3.4.12"
description = "Python wrapper and metaschema for datadictionary."
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/dictionaryutils"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9, <4"
PyYAML = "*"
# limiting to a version where RefResolver is deprecated but still functioning
jsonschema = "<=4.23.0"
cdislogging = "*"
requests = "*"
# set 'develop = true' to prevent over-writing by 'gen3dictionary', similar to
# https://github.com/uc-cdis/gen3datamodel/blob/190f99885c660a2971ec64522168548e19bea512/Pipfile#L16
gdcdictionary = {git = "https://github.com/NCI-GDC/gdcdictionary.git", rev = "2.0.0", develop = true}


[tool.poetry.dev-dependencies]
pytest = "*"
data-simulator = {git = "https://github.com/uc-cdis/data-simulator.git", branch = "chore/use-absolute-path-in-imports"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
