[tool.poetry]
name = "dictionaryutils"
version = "3.5.1"
description = "Python wrapper and metaschema for datadictionary."
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/dictionaryutils"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9, <4"
PyYAML = "*"
# limiting to a version where RefResolver is deprecated but still functioning
jsonschema = "<=4.23.0"
cdislogging = "*"
requests = "*"
gen3dictionary = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
data-simulator = {git = "https://github.com/uc-cdis/data-simulator.git"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
