[tool.poetry]
name = "dictionaryutils"
version = "4.0.0"
description = "Python wrapper and metaschema for datadictionary."
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/dictionaryutils"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.13,<4"
PyYAML = "*"
# limiting to a version where RefResolver is deprecated but still functioning
jsonschema = "<=4.23.0"
cdislogging = "*"
requests = "*"
gen3dictionary = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
data-simulator = {git = "https://github.com/uc-cdis/data-simulator.git"}

[build-system]
requires = ["poetry>=2.1.0"]
build-backend = "poetry.masonry.api"
